# ImageKeeper

./: CMakeLists.txt  ImgChooser.qml  Main.qml  NewItemSpace.qml  README.md  data.json  datamanager.cpp  datamanager.h  main.cpp
cpp/: datamanager.cpp  main.cpp
qml/: ImgChooser.qml  Main.qml
